add our kubernetes label worker: fargate for starting app on fargate

--- a/kubernetes-demo-app/frontend-deployment.yaml
+++ b/kubernetes-demo-app/frontend-deployment.yaml
@@ -9,12 +9,14 @@ spec:
     matchLabels:
       app: guestbook
       tier: frontend
+      worker: fargate
   replicas: 3
   template:
     metadata:
       labels:
         app: guestbook
         tier: frontend
+        worker: fargate
     spec:
       containers:
       - name: php-redis
