--- a/kubernetes-demo-app/redis-master-deployment.yaml
+++ b/kubernetes-demo-app/redis-master-deployment.yaml
@@ -10,6 +10,7 @@ spec:
       app: redis
       role: master
       tier: backend
+      worker: fargate
   replicas: 1
   template:
     metadata:
@@ -17,6 +18,7 @@ spec:
         app: redis
         role: master
         tier: backend
+        worker: fargate
     spec:
       containers:
       - name: master
