--- a/kubernetes-demo-app/redis-master-service.yaml
+++ b/kubernetes-demo-app/redis-master-service.yaml
@@ -6,6 +6,7 @@ metadata:
     app: redis
     role: master
     tier: backend
+    worker: fargate
 spec:
   ports:
   - port: 6379
@@ -14,3 +15,5 @@ spec:
     app: redis
     role: master
     tier: backend
+    worker: fargate
+
