--- a/kubernetes-demo-app/frontend-service.yaml
+++ b/kubernetes-demo-app/frontend-service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
+  annotations:
+    alb.ingress.kubernetes.io/target-type: ip
   labels:
     app: guestbook
     tier: frontend
 spec:
-  type: NodePort 
   ports:
   - port: 80
     targetPort: 80
